typescript/checker/tests/conformance/expressions/functionCalls/newWithSpread.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            318,
        ),
        hi: BytePos(
            319,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:26:5
   |
26 | var a: string[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            335,
        ),
        hi: BytePos(
            336,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:27:5
   |
27 | var b: A;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            345,
        ),
        hi: BytePos(
            346,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:28:5
   |
28 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            355,
        ),
        hi: BytePos(
            356,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:29:5
   |
29 | var d: A[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            367,
        ),
        hi: BytePos(
            368,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:30:5
   |
30 | var e: { [key: string]: A };
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            396,
        ),
        hi: BytePos(
            397,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:31:5
   |
31 | var g: C[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            408,
        ),
        hi: BytePos(
            409,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:32:5
   |
32 | var h: { [key: string]: C };
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            437,
        ),
        hi: BytePos(
            438,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpread.ts:33:5
   |
33 | var i: C[][];
   |     ^

